--- a/backend/readme/books/templates/book_list.html
+++ b/backend/readme/books/templates/book_list.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <h1> 책 리스트</h1>
     <div class="col-md-12">
         <div class="container">
             <div id="example1" class="list-group col">
