박서영05-리뷰작성수정

--- a/backend/readme/books/templates/search_book.html
+++ b/backend/readme/books/templates/search_book.html
@@ -26,9 +26,9 @@
         <div class="container">
             <div class="card">
                 <div class="card-body">
-                    <p>{{ c.book_name }}</p>
+                    <p>{{ c.book_title }}</p>
                     <p>{{ c.book_author }}</p>
-                    <p>{{ c.book_cateory }}</p>
+                    <p>{{ c.book_subcateory }}</p>
                 </div>
             </div>
         </div>
